# Autonomous-Job-Application-Portal

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  render.yaml  vercel.json
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3d38516328b7_add_raw_text_to_resumes.py  a1b2c3d4e5f6_add_job_matching_models.py  b2c3d4e5f6a7_add_active_resume_id_to_user.py  c3d4e5f6a7b8_dedupe_job_matches.py  d4e5f6a7b8c9_store_resume_files_in_postgres.py
backend/app/: bootstrap_db.py  main.py
backend/app/agents/: application_agent.py  base.py  career_advisor_agent.py  cover_letter_agent.py  orchestrator.py  resume_agent.py  resume_optimizer_agent.py
backend/app/api/: deps.py
backend/app/core/: ai_logger.py  cache_service.py  config.py  database.py  exceptions.py  logging.py  notifier.py  rate_limiter.py  redis.py  s3.py  security.py  telemetry.py
backend/app/crawlers/: __init__.py  base.py  factory.py  greenhouse.py
backend/app/integrations/: arbeitnow.py  greenhouse.py  jobicy.py  jsearch.py  lever.py  remoteok.py  remotive.py
backend/app/middleware/: logging.py  rate_limit.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  application.py  base.py  interview.py  job.py  matching.py  misc.py  notification.py  resume.py  user.py
backend/app/schemas/: application.py  auth.py  common.py  job.py  matching.py  resume.py
backend/app/services/: application_service.py  auth_service.py  cache_service.py  cover_letter_service.py  interview_service.py  job_service.py  matching_service.py  (+2 more)
backend/scripts/: create_admin.py  seed_db.py
backend/tests/: conftest.py
(+102 files in other folders)
