[project]
name = "jobagent"
version = "0.1.0"
description = "Autonomous Job Application Agent API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis[hiredis]>=5.0.7",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "httpx>=0.27.0",
    "boto3>=1.34.131",
    "python-multipart>=0.0.9",
    "python-docx>=1.1.2",
    "PyMuPDF>=1.24.5",
    "pdfplumber>=0.11.4",
    "pdf2image>=1.17.0",
    "openai>=1.35.0",
    "langchain>=0.2.5",
    "langgraph>=0.1.9",
    "langchain-openai>=0.1.23",
    "langchain-community>=0.2.5",
    "celery[redis]>=5.4.0",
    "sentry-sdk>=2.8.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "tenacity>=8.5.0",
    "Pillow>=10.3.0",
    "structlog>=24.1.0",
    "email-validator>=2.1.1",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "google-genai>=1.0.0",
    "groq>=0.9.0",
    "playwright>=1.45.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "factory-boy>=3.3.0",
    "httpx>=0.27.0",
    "types-python-dateutil>=2.9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"
